Mudança de estilo, fonte e background

--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifólio Adadezer</title>
+
+    <style>
+        @font-face {
+                font-family:dosis;
+                src: url(dosis.ttf);
+            }
+        body{
+            font-family: dosis;
+            font-size:x-large;
+            color: #c4c4c4;
+            background-color: #1b4332;
+        }
+
+        a{
+            color: #c4c4c4;
+            text-decoration: none;
+        }
+    </style>
 </head>
+
 <body>
     <h2>Índice</h2>
     <ul>
@@ -17,13 +36,13 @@
     <hr>
 
     <h1 id="eu">Adadezer Suhita Iwazaki</h1>
-    <img src="images/headset.jpg" alt="foto adadezer" width="200px">
+    <img src="images/headset.jpg" alt="foto adadezer usando um headset" width="200px">
     <p>
-        Olá! Me chamo <strong>Adadezer</strong>, sou Brasileiro, moro na cidade de <strong>Mauá - SP</strong>
+        Olá! Me chamo <strong>Adadezer</strong>, sou Brasileiro, moro na cidade de <strong>Mauá - SP</strong>, localizado no Grande ABC Paulista
     </p>
 
     <p>
-        Adoro música, sou <em>bateirista</em>, e atualmente sou <strong>estudante de desenvolvimento web na trybe</strong>
+        Adoro música, sou <em>bateirista</em>, e atualmente sou <strong>Estudante de Desenvolvimento Web na Trybe</strong>
     </p>
 
     <hr>
